terraform/k8s/web/backend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: web
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  # strategy:
    # type: RollingUpdate
    # rollingUpdate:
    #   maxSurge: 30%
    #   maxUnavailable: 30%
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        node-group: server-group
      containers:
        - name: spring
          image: jotunlmn.kr.private-ncr.ntruss.com/docker-pnu-bookstore-spring:latest
          resources:          
            limits:
              cpu: "500m"
              memory: "1Gi"
          ports:
            - name: spring
              containerPort: 8080
              protocol: TCP

        - name: nginx
          image: nginx:latest
          ports:
          - containerPort: 80
          volumeMounts:
          - name: nginx-logs
            mountPath: /var/log/nginx
          - name: nginx-config
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
          resources:
            limits:
              cpu: "100m"
              memory: "128Mi"
      volumes:
        - name: nginx-logs
          hostPath:
            path: /var/log/nginx
        - name: nginx-config
          configMap:
            name: nginx-config
            items:
            - key: nginx.conf
              path: nginx.conf
      imagePullSecrets:
      - name: docker-registry
    
              
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: web
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
